style.css
* {
    border: 1px solid red;
}
/* Text styles ====================================*/

h1,
h2,
h3,
h4,
h5,
.display,
p,
a,
.body-emphasis,
.small-copy-emphasis {
    font-family: greycliff-cf, sans-serif;

}

h1,
h2,
h3,
h4,
h5,
.display {
    font-weight: 700;
}



h1 {
    font-size: 41px;
    line-height: 41px;
}

h2 {
    font-size: 34px;
    line-height: 34px;
}

h3 {
    font-size: 28px;
    line-height: 28px;
}

h4 {
    font-size: 23px;
    line-height: 23px;
}

h5 {
    font-size: 19px;
    line-height: 19px;
}

p {
    font-size: 16px;
    line-height: 144%;
}

.body-emphasis {
    font-size: 16px;
    line-height: 120%;
    font-weight: 700;
}

.small-copy-emphasis {
    font-size: 13px;
    line-height: 120%;
    font-weight: 700;

}

.display {
    font-size: 98px;
    line-height: 97px;
}

li {
    list-style: none;
}

a {
    text-decoration: none;
    color: inherit;
}

/* Global styles ====================================*/

body {
    max-width: 1440px;
    margin: auto;
}

nav {
    display: flex;
    justify-content: space-between;
    padding: 20px 0;
    background-color: #2d2d2d;
}

header {
    color: #40CED9;
    height: 180px;
    display: flex;
    flex-direction: column;
    align-items: left;
    justify-content: center;
}

header h1 {
    margin-bottom: 8px;
}

nav ul li {
    display: inline-block;
    padding-left: 28px;
    padding-right: 24px;
}

#nav-dark {
    color: rgb(238, 238, 238);
}

#nav-light {
    color: rgb(0, 0, 0);
}

#tags {
    padding: 20px 0;
}

#tags li {
    display: inline-block;
    padding: 0 5px;
}

.tag p {
    background-color: #40CED9;
    color: #353535;
    padding: 8px;
    border-radius: 30px;
}

#reset-filters {
    color: #454545;
}

footer {
    position: absolute;
    bottom: 20px;
    color: rgb(238, 238, 238);
}

/* grid styles ====================================*/

#tiles-picker {

    height: 520px;
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: repeat(2, 1fr);
    box-shadow: 0px 4px 134px 80px rgba(0, 0, 0, 0.25);
}

#tiles-picker img {
    width: 100%;
    height: 100%;
}

body {
    width: 1040px;
    background-color: #353535;
}

#about-page {
    margin: auto;
    width: 1040px;
    display: grid;
    grid-template: repeat(12, 72px)/repeat(12, 72px);
    gap: 16px;
    background-color: white;
    box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.15);
}

#hello {
    grid-column: 2 / 5;
    grid-row: 2 / 4;
    background: linear-gradient(90deg, #40CED9 0%, #00B5B2 100%);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    background-clip: text;
}


#bio {
    grid-column: 6 / span 6;
    grid-row: 2 / span 11;
}

#profile-picture {
    width: 100%;
    height: 100%;
    object-fit: cover;
    grid-column: 2 / span 3;
    grid-row: 2 / span 3;
    border-radius: 100%;
}

#contact-links {
    grid-column: 2;
    grid-row: 7;
}

.container {
    position: relative;
}

.overlay {
    text-align: center;
    position: absolute;
    display: flex;
    flex-direction: column;
    gap: 32px;
    justify-content: center;
    align-items: center;
    background: #353535cc;
    color: #fff;
    width: 100%;
    height: 100%;
    transition: .5s ease;
    opacity: 0;
}

.container:hover .overlay {
    opacity: 1;
}

.small-tags {
    display: flex;
    gap: 8px;
}

.tag-s {
    background-color:#40CED9;
    color: #353535;
    padding: 4px 10px;
    border-radius: 30px;
}

/* Dropdown ================= */


.dropdown .dropbtn {
    cursor: pointer;
    border: none;
    outline: none;
    background-color: inherit;
    margin: 0;
    color: white;
}

.dropdown-content {
    
    display: none;
    margin-top: 31px;
    z-index: -1;
    background-color: #454545;
    min-width: 160px;
    position: absolute;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);

}
.dropdown-content a{
    display: block;
    padding: 12px 16px;
}

.dropdown-content a:hover {
    background-color:#353535
}

.show {
    display: block;
}

